# nebu-cli

./: .nebu.yaml  Cargo.toml  LICENSE  README.md
crates/nebu/: Cargo.toml  build.rs
crates/nebu-cache/: Cargo.toml
crates/nebu-cache/src/: error.rs  lib.rs  repo.rs
crates/nebu-cli/: Cargo.toml
crates/nebu-config/: Cargo.toml
crates/nebu-config/src/: lib.rs
crates/nebu-fs/: Cargo.toml
crates/nebu-fs/src/: lib.rs
crates/nebu-macros/: Cargo.toml
crates/nebu-template/: Cargo.toml
crates/nebu-template/src/: config.rs  lib.rs
crates/nebu/src/: error.rs  main.rs  version.rs
crates/nebu/src/cmds/: env.rs  mod.rs  project.rs  version.rs
crates/nebu/src/cmds/project/: add.rs  init.rs  mod.rs
