[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.87.0"
homepage = "https://github.com/lerpz-com"
documentation = "https://github.com/lerpz-com"
license = "MIT"
repository = "https://github.com/lerpz-com/nebu-cli"
authors = ["Kanerix <kas@lerpz.com>"]

[workspace.dependencies]
anyhow = "1.0"
clap = "4.5"
clap-cargo = "0.15"
console = "0.15"
dialoguer = "0.11"
git2 = "0.20"
miette = "7.6"
owo-colors = "4.2"
rayon = "1.10"
schemars = "1.0"
serde = "1.0"
serde_json = "1.0"
thiserror = "2.0"
tokio = "1.45"
tracing = "0.1"
tracing-subscriber = "0.3"


[workspace.lints.rust]
unsafe_code = "warn"
