[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"
license = "MIT"
homepage = "https://github.com/lerpz-com"
documentation = "https://github.com/lerpz-com"
repository = "https://github.com/lerpz-com/nebu-cli"
authors = ["Kanerix <kas@lerpz.com>"]

[workspace.dependencies]
# Internal crates
nebu-cache = { path = "./crates/nebu-cache" }
nebu-config = { path = "./crates/nebu-config" }
nebu-fs = { path = "./crates/nebu-fs" }
nebu-macros = { path = "./crates/nebu-macros" }
# External crates
anyhow = "1.0"
clap = "4.5"
clap-cargo = "0.16"
console = "0.16"
dialoguer = "0.11"
git2 = "0.20"
home = "0.5"
miette = "7.6"
nanoid = "0.4"
owo-colors = "4.2"
rayon = "1.10"
schemars = "1.0"
serde = "1.0"
serde_json = "1.0"
tempfile = "3.20"
thiserror = "2.0"
tokio = "1.46"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
twox-hash = "2.1"

[workspace.lints.rust]
unsafe_code = "warn"
