[package]
name = "nebu-cache"
edition = "2024"
version.workspace = true

[dependencies]
anyhow = "1.0.98"
console = "0.15.11"
indicatif = "0.17.11"
miette = "7.6.0"
owo-colors = "4.2.2"
rayon = "1.10.0"
schemars = "1.0.1"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = "1.45.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
