[package]
name = "nebu-cache"
edition = "2024"
version.workspace = true

[dependencies]
anyhow = { workspace = true }
console = { workspace = true }
git2 = { workspace = true }
miette = { workspace = true }
owo-colors = { workspace = true }
rayon = { workspace = true }
schemars = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
twox-hash = { workspace = true }
url = "2.5.4"
