[package]
name = "nebu-fs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
home = { workspace = true }

[lints]
workspace = true
