[package]
name = "nebu-template"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }

[lints]
workspace = true
