[package]
name = "nebu"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
nebu-cache = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true, features = [
    "cargo",
    "color",
    "derive",
    "env",
    "error-context",
    "help",
    "string",
    "suggestions",
    "usage",
] }
clap-cargo = { workspace = true, features = ["clap"] }
dialoguer = { workspace = true }
git2 = { workspace = true }
home = { workspace = true }
miette = { workspace = true, features = ["fancy", "fancy-base"] }
nanoid = { workspace = true }
owo-colors = { workspace = true, features = ["supports-colors"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
schemars = { workspace = true, features = ["derive"], optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[features]
default = ["schema"]
schema = ["dep:schemars"]
